app/styles/app.css
html, body {
  height: 100%;
  margin: 0;
  font-family: 'Austin News Deck';
  -webkit-font-smoothing: antialiased;
  background-color: black;
  overflow: hidden;
  font-size: 100%;
}

body > .ember-view {
  height: 100%;
}

.liquid-container.ember-view {
  z-index: 2;
  height: 100%;
}

.liquid-child.ember-view {
  height: 100%;
}

.flex {
  display: flex;
}

.preLine {
 white-space: pre-line;
}

.relative {
  position: relative;
}

.absolute {
  position: absolute;
}

.t0 {
  top: 0px;
}

/* Ember Chimp */
.chimp-says {
  font-size: 12px;
}

@media (min-width: 40em) {
  .chimp-says {
    font-size: 18px;
  }
}

.loading > .chimp-says {
  display: none;
}


input:focus,
select:focus,
textarea:focus,
button:focus {
  outline: none;
}

/*
This is mostly for styling
markup coming from medium on
the feed route
*/

h1, h2, h3, h4, h5, h6, p {
  font-family: 'Austin News Deck';
  margin: 0;
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

/* Small Up */
h1 { font-size: 3em; }
h2 { font-size: 2.8em; }
h3 { font-size: 2.25em; }
h4 { font-size: 2em; }
h5 { font-size: 1.25em; }
h6 { font-size: 1em; }

/* Medium Up */
@media (min-width: 52em) {
  h1 { font-size: 3.4em; }
  h2 { font-size: 3em; }
  h3 { font-size: 2.8em; }
  h4 { font-size: 2.25em; }
  h5 { font-size: 2em; }
  h6 { font-size: 1.25em; }
}

/* Large Up */
@media (min-width: 64em) {
  h1 { font-size: 4em; }
  h2 { font-size: 3.4em; }
  h3 { font-size: 3em; }
  h4 { font-size: 2.8em; }
  h5 { font-size: 2.25em; }
  h6 { font-size: 2em; }
}

* {
  box-sizing: border-box;
}

a {
  text-decoration: none;
}

@font-face {
	font-family: 'Austin News Deck';
	src: url('AustinNewsDeck-Light-Web.eot');
	src: local('Austin News Deck'), local('Austin News Deck Light'),
		url('/fonts/AustinNewsDeck-Light-Web.eot?#iefix') format('embedded-opentype'),
		url('/fonts/AustinNewsDeck-Light-Web.woff2') format('woff2'),
		url('/fonts/AustinNewsDeck-Light-Web.woff') format('woff'),
		url('/fonts/AustinNewsDeck-Light-Web.ttf') format('truetype'),
		url('/fonts/AustinNewsDeck-Light-Web.svg#Calibre-Black') format('svg');
	font-weight: 300;
	font-style: normal;
}

@font-face {
	font-family: 'Austin News Deck';
	src: url('AustinNewsDeck-Roman-Web.eot');
	src: local('Austin News Deck'), local('Austin News Deck Roman'),
		url('/fonts/AustinNewsDeck-Roman-Web.eot?#iefix') format('embedded-opentype'),
		url('/fonts/AustinNewsDeck-Roman-Web.woff2') format('woff2'),
		url('/fonts/AustinNewsDeck-Roman-Web.woff') format('woff'),
		url('/fonts/AustinNewsDeck-Roman-Web.ttf') format('truetype'),
		url('/fonts/AustinNewsDeck-Roman-Web.svg#Calibre-Black') format('svg');
	font-weight: normal;
	font-style: normal;
}

@font-face {
  font-family: 'AtlasGroteskRegular';
  src: url('/fonts/AtlasGroteskRegular.eot');
  src: url('/fonts/AtlasGroteskRegular.eot') format('embedded-opentype'),
       url('/fonts/AtlasGroteskRegular.woff2') format('woff2'),
       url('/fonts/AtlasGroteskRegular.woff') format('woff'),
       url('/fonts/AtlasGroteskRegular.ttf') format('truetype'),
       url('/fonts/AtlasGroteskRegular.svg#AtlasGroteskRegular') format('svg');
 font-weight: normal;
 font-style: normal;
}

@font-face {
  font-family: 'AtlasGroteskLight';
  src: url('/fonts/AtlasGroteskLight.eot');
  src: url('/fonts/AtlasGroteskLight.eot') format('embedded-opentype'),
       url('/fonts/AtlasGroteskLight.woff2') format('woff2'),
       url('/fonts/AtlasGroteskLight.woff') format('woff'),
       url('/fonts/AtlasGroteskLight.ttf') format('truetype'),
       url('/fonts/AtlasGroteskLight.svg#AtlasGroteskLight') format('svg');
  font-weight: 100;
  font-style: normal;
}

